z-index solve

--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ html {
     justify-content: center;
     box-shadow: 0 0 10px var(--color-1);
     backdrop-filter: blur(5px);
-    z-index: 5;
+    z-index: 12;
     transition: all ease-in 0.2s;
 }
 
@@ -508,6 +508,7 @@ nav ul li a:hover {
     border: solid 2px var(--color-card-border);
     overflow: hidden;
     transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 0.3s;
+    z-index: 10;
 }
 .card-services:hover{
     position: relative;
@@ -574,6 +575,7 @@ nav ul li a:hover {
     border: 2px solid #aaa;
     overflow: hidden;
     transition: all ease-in 0.2s;
+    z-index: 10;
 }
 .card-proj:hover{
     position: relative;
